# plugins

./: README.md  adapters.toml  plugins.toml
.github/workflows/: build-plugins.yml  release-ipc-adapters.yml
adapter-elgato-lights/: Cargo.toml  README.md  plugin.toml
adapter-elgato-lights/src/: lib.rs
adapter-ollama/: Cargo.toml  README.md  plugin.toml
adapter-ollama/src/: lib.rs
adapter-roku-tv/: Cargo.toml  README.md  plugin.toml
adapter-roku-tv/src/: lib.rs
adapter-zigbee2mqtt/: Cargo.toml  README.md  plugin.toml
adapter-zigbee2mqtt/src/: lib.rs
plugin-elgato-lights/: Cargo.toml  elgato_lights.plugin.toml  elgato_lights.wasm
plugin-elgato-lights/src/: lib.rs
plugin-mqtt/: Cargo.toml  mqtt.plugin.toml
plugin-mqtt/src/: main.rs
plugin-ollama/: Cargo.toml  ollama.plugin.toml  ollama.wasm
plugin-ollama/src/: lib.rs
plugin-open-meteo/: Cargo.toml  open_meteo.plugin.toml  open_meteo.wasm
plugin-open-meteo/src/: lib.rs
plugin-roku-tv/: Cargo.toml  roku_tv.plugin.toml  roku_tv.wasm
plugin-roku-tv/src/: lib.rs
plugin-zigbee2mqtt/: Cargo.toml  zigbee2mqtt.plugin.toml  zigbee2mqtt.wasm
plugin-zigbee2mqtt/src/: lib.rs  main.rs
plugin-zigbee2mqtt/wit/: homecmdr-plugin.wit
template-ipc/: Cargo.toml  my_plugin.plugin.toml
template-ipc/src/: main.rs
template-wasm/: Cargo.toml  my_plugin.plugin.toml
template-wasm/src/: lib.rs
