[package]
name = "adapter-zigbee2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
inventory = "0.3"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
homecmdr-core = { path = "../core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
