[workspace]
# This crate is intentionally outside any workspace.
# Build target: wasm32-wasip2 (set in .cargo/config.toml)

[package]
name = "plugin-elgato-lights-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen  = "0.57.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
