[workspace]
# Standalone native binary — not part of the homecmdr-api workspace.

[package]
name    = "zigbee2mqtt-adapter"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "zigbee2mqtt-adapter"
path = "src/main.rs"

[dependencies]
anyhow           = "1"
futures-util     = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc          = "0.24"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto       = true
